altered login landing

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Simple React App</title>
+  <title>Bibliotheca | A place to keep all your thoughts</title>
   <script src="https://kit.fontawesome.com/78b92802bb.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
